删除服务
